Fix login alignment on desktop

--- a/app/assets/stylesheets/elements/_profile.scss
+++ b/app/assets/stylesheets/elements/_profile.scss
@@ -12,6 +12,7 @@
 
   @include media-min(md) {
     flex-direction: row;
+    justify-content: flex-end;
   }
 }
 
